--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_activity_menu">Menu</string>
     <string name="title_activity_cart">Order Cart</string>
     <string name="title_activity_result">Order Placed</string>
+    <string name="title_activity_bitcoin">Pay With Bitcoin</string>
 </resources>
